src/test/deca/context/valid/personalTests/readfloat.deca
{
    float b = readFloat();
    println(b);
}