src/test/deca/context/invalid/personalTests/int_depassement.deca
{
   int x = 50000000000;
}
